Add font-family to global styles in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             --primary-bg: #312e81;
         }
 
-        * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
+        * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; font-family: 'Vazirmatn', sans-serif; }
 
         body {
             font-family: 'Vazirmatn', sans-serif;
