--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <script>
         // *** CONFIG ***
         // آدرس ورکر خود را اینجا وارد کنید:
-        const CLOUDFLARE_WORKER_URL = "https://habit.mikasaa.workers.dev/"; 
+        const CLOUDFLARE_WORKER_URL = "https://habit.mikasaa.workers.dev"; 
 
         // ICONS & DATA
         const ICONS = {
